--- a/composer.json
+++ b/composer.json
@@ -22,11 +22,11 @@
       "@phpcs",
       "@phpmd"
     ],
-    "phplint": "vendor/bin/parallel-lint --exclude vendor/ --exclude .idea/ -e php,module,inc,install,profile,theme .",
-    "phpunit": "vendor/bin/phpunit --configuration=phpunit.xml",
-    "phpcs": "vendor/bin/phpcs --ignore=vendor/,.idea/ --standard=vendor/drupal/coder/coder_sniffer/Drupal/ruleset.xml --extensions=php,module,inc,install,profile,theme --report=full --warning-severity=0 .",
-    "phpcbf": "vendor/bin/phpcbf --ignore=vendor/,.idea/ --standard=vendor/drupal/coder/coder_sniffer/Drupal/ruleset.xml --extensions=php,module,inc,install,profile,theme .",
-    "phpmd": "vendor/bin/phpmd --exclude vendor/,.idea/ --suffixes php,module,inc,install,profile,theme . text phpmd.xml"
+    "phplint": "vendor\\bin\\parallel-lint --exclude vendor/ --exclude .idea/ -e php,module,inc,install,profile,theme .",
+    "phpunit": "vendor\\bin\\phpunit --configuration=phpunit.xml",
+    "phpcs": "vendor\\bin\\phpcs --ignore=vendor/,.idea/ --standard=vendor/drupal/coder/coder_sniffer/Drupal/ruleset.xml --extensions=php,module,inc,install,profile,theme --report=full --warning-severity=0 .",
+    "phpcbf": "vendor\\bin\\phpcbf --ignore=vendor/,.idea/ --standard=vendor/drupal/coder/coder_sniffer/Drupal/ruleset.xml --extensions=php,module,inc,install,profile,theme .",
+    "phpmd": "vendor\\bin\\phpmd --exclude vendor\\,.idea\\ --suffixes php,module,inc,install,profile,theme . text phpmd.xml"
   },
   "autoload": {
     "psr-4": {
